--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,13 @@ services:
       dockerfile: Dockerfile.backend
     ports:
       - "8000:8000"
+    env_file:
+      - .env
     environment:
       - ENV=development
       - PYTHONPATH=/app
+      - QDRANT_HOST=qdrant
+      - QDRANT_PORT=6333
     volumes:
       - ./backend:/app/backend
       - ~/.james:/root/.james
@@ -30,6 +34,7 @@ services:
       - /app/node_modules
     depends_on:
       - backend
+    command: npm run dev
 
   qdrant:
     image: qdrant/qdrant:latest
