--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,6 @@ build-backend = "hatchling.build"
 name = "conscious-agent-system"
 version = "0.1.0"
 description = "A conscious AI agent system with stream-of-consciousness capabilities"
-readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "fastapi>=0.104.0",
@@ -25,6 +24,8 @@ dependencies = [
     "asyncio-mqtt>=0.13.0",
     "docker>=7.0.0",
     "python-dotenv>=1.0.0",
+    "aiofiles>=23.2.0",
+    "aiohttp>=3.9.0",
 ]
 
 [project.optional-dependencies]
@@ -62,3 +63,10 @@ python_version = "3.11"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.1",
+    "pytest-asyncio>=1.0.0",
+    "pytest-cov>=6.2.1",
+]
